--- a/languages/stp-importer.pot
+++ b/languages/stp-importer.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Simple Tags Importer 0.2\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/stp-importer\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/tag/stp-importer\n"
 "POT-Creation-Date: 2010-06-01 13:26+0300\n"
 "PO-Revision-Date: 2010-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
@@ -110,7 +110,7 @@ msgid "Simple Tags Importer"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://wordpress.org/extend/plugins/stp-importer/"
+msgid "https://wordpress.org/extend/plugins/stp-importer/"
 msgstr ""
 
 #. Author of the plugin/theme
@@ -118,5 +118,5 @@ msgid "wordpressdotorg"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "http://wordpress.org/"
+msgid "https://wordpress.org/"
 msgstr ""
